examples/bad/05-while.tx
fun main(): Void {
  while(True)
    printString("infinity");


  return;
}